--- a/main.tex
+++ b/main.tex
@@ -54,7 +54,7 @@
 \input{tech/04-Tools_Miscellaneous.tex}
 \input{tech/05-lab_set-up.tex}
 \input{tech/06-FileSystem_forensics.tex}
-
+\input{tech/07-Network_forensics.tex}
 \end{document}
 
 % Sample of a centered image in LaTeX
